[package]
name = "invoked_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.1"
serde_json= "1.0"

[dev-dependencies]
solana-program-test = "1.9.1"
solana-sdk = "=1.9.1"

[lib]
name = "invoked_program"
crate-type = ["cdylib", "lib"]
